# restaurant_api

./: .env  Cargo.toml  README.md  docker-compose.yml  run.sh
mysql_db/: init.sql
postman/: restaurant_api_collection.json
src/: main.rs
src/api/: health_check.rs
src/database_utils/: database_connection.rs
src/errors/: errors.rs
src/handlers/: health_check.rs  items.rs  mod.rs  tables.rs
src/models/: database.rs  database_models.rs  request.rs  response.rs
src/utils/: mod.rs  response_builder.rs
tests/: tests.rs  utils.rs
