[package]
name = "restaurant_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rand = "0.8.5"
mysql = "24.0.0"
serde = { version = "^1", features = ["derive"] }
chrono = "0.4.31"
