[package]
name = "restaurant_api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["mysql", "chrono", "runtime-tokio"] }
axum = "0.7.4"
dotenv = "0.15.0"
